--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,6 @@ jobs:
 
     - name: Publish NPM package
       run: |
-        cd cli && npm update aws-sdk && npm publish
+        cd cli && npm update aws-sdk && npm version patch && npm publish
       env:
         NPM_AUTH_TOKEN: ${{ secrets.FORMER2_NPM_AUTH_TOKEN }}
