--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,4 @@ jobs:
 
     - name: Publish NPM package
       run: |
-        cd cli && npm update aws-sdk && npm version patch && npm publish
-      env:
-        NPM_TOKEN: ${{ secrets.FORMER2_NPM_AUTH_TOKEN }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        cd cli && npm update aws-sdk && npm version patch && echo "//registry.npmjs.org/:_authToken=${{ secrets.FORMER2_NPM_AUTH_TOKEN }}" > ~/.npmrc && npm publish
