--- a/cli/package.json
+++ b/cli/package.json
@@ -21,7 +21,8 @@
     "colors": "^1.4.0",
     "commander": "^4.1.0",
     "deepmerge": "^4.2.2",
-    "logplease": "^1.2.15"
+    "logplease": "^1.2.15",
+    "proxy-agent": "^3.1.1"
   },
   "bin": "./main.js"
 }
