--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "former2",
-  "version": "0.2.54",
+  "version": "0.2.55",
   "description": "Command-line interface for the Former2.com tool",
   "keywords": [
     "aws",
@@ -24,5 +24,7 @@
     "logplease": "^1.2.15",
     "proxy-agent": "^3.1.1"
   },
-  "bin": "./main.js"
+  "bin": {
+    "former2": "main.js"
+  }
 }
