--- a/cli/package.json
+++ b/cli/package.json
@@ -8,6 +8,10 @@
     "terraform",
     "troposphere"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/iann0036/former2"
+  },
   "main": "main.js",
   "scripts": {
     "prepare": "cp -f ../js/deepmerge.js . && cp -f ../js/mappings.js . && cp -f ../js/datatables.js . && cp -r ../js/services .",
